Deployer Spleis til dev-gcp
* Starter uten å lytte på rapiden. Appen starter kun med Kubernetes probes og databasemigrering.
* Fjerner Vault-avhengighet i mediator
* Tilpasser DataSourceBuilder til environment variables vi får fra nais ved deploy i gcp
* Setter opp Postgres 14 db i gcp

Co-authored-by: Christian Bülow Skovborg <christian.bulow.skovborg@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -33,8 +33,12 @@ spec:
   webproxy: true
   kafka:
     pool: nav-dev
-  vault:
-    enabled: true
+  gcp:
+    sqlInstances:
+      - type: POSTGRES_14
+        databases:
+          - name: spleis
+            envVarPrefix: DATABASE
   secureLogs:
     enabled: true
   env:
@@ -44,13 +48,5 @@ spec:
     value: tbd-spleis-v1
   - name: KAFKA_RESET_POLICY
     value: earliest
-  - name: DATABASE_HOST
-    value: b27dbvl008.preprod.local
-  - name: DATABASE_PORT
-    value: "5432"
-  - name: DATABASE_NAME
-    value: spleis
-  - name: VAULT_MOUNTPATH
-    value: postgresql/preprod-fss/
   - name: GraphQLPlayground
     value: "true"
