Deploy til prod trenger også build og snyk
Co-authored-by: Hege Haavaldsen <hege.haavaldsen@nav.no>
Co-authored-by: Kevin Sillerud <kevin.sillerud@gmail.com>
Co-authored-by: Joakim Taule Kartveit <joakim.taule.kartveit.nav.no>

--- a/.github/workflows/spleis-jobs.yml
+++ b/.github/workflows/spleis-jobs.yml
@@ -56,7 +56,7 @@ jobs:
 
   deployProd:
       name: deploy to prod
-      needs: [set_version]
+      needs: [set_version, build, snyk]
       runs-on: ubuntu-latest
       steps:
           - uses: actions/checkout@v1
