Ikke bygg spleis-mediator med mindre koden er endret
Co-authored-by: Hege Haavaldsen <hege.haavaldsen@nav.no>
Co-authored-by: Simen Ullern <simen.ullern@nav.no>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -2,6 +2,14 @@ name: Alt utenom API
 
 on:
   push:
+    paths-ignore:
+      - 'sykepenger-api/**'
+      - 'jobs/**'
+      - 'doc/**'
+      - '.idea/**'
+      - 'README.md'
+      - 'LICENSE'
+      - 'CODEOWNERS'
     branches:
       - master
 
