Deploy spleis i dev-gcp
* Endre app-navn fordi gcp klager på at navnet allerede er "oppbrukt". "Oppbrukt" pga. diverse testing i dev. Slettede ressurser reserverer navn i opptil 30 dager.

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -113,7 +113,7 @@ spec:
           application: spoler
           access: readwrite
         - team: tbd
-          application: spleis
+          application: helse-spleis
           access: readwrite
         - team: tbd
           application: spleis-api
