Sett cluster og namespace i access policy for spesialist

--- a/deploy/dev-api.yml
+++ b/deploy/dev-api.yml
@@ -52,6 +52,8 @@ spec:
     inbound:
       rules:
         - application: spesialist
+          namespace: tbd
+          cluster: dev-fss
         - application: spanner
           namespace: tbd
           cluster: dev-gcp
