--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -68,16 +68,16 @@ jobs:
           CLUSTER: dev-gcp
           RESOURCE: deploy/dev.yml
           IMAGE: ${{ needs.set_version.outputs.image }}
-
-  deployProd:
-    name: deploy to prod
-    needs: [set_version, build, deployDev, snyk]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: nais/deploy/actions/deploy@v1
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: prod-fss
-          RESOURCE: deploy/prod.yml
-          IMAGE: ${{ needs.set_version.outputs.image }}
+#
+#  deployProd:
+#    name: deploy to prod
+#    needs: [set_version, build, deployDev, snyk]
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v1
+#      - uses: nais/deploy/actions/deploy@v1
+#        env:
+#          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+#          CLUSTER: prod-fss
+#          RESOURCE: deploy/prod.yml
+#          IMAGE: ${{ needs.set_version.outputs.image }}
