Deploy opprydding-dev-app
Co-authored-by: Sondreeey Halvorsen <sondre.halvorsen@nav.no>
Co-authored-by: David Steinsland <david@davidsteinsland.net>
Co-authored-by: Erik Maximilian Forsman <erik.maximilian.forsman@nav.no>
Co-authored-by: PartyJesus <morten.tholander@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -172,6 +172,9 @@ spec:
         - team: tbd
           application: spleis-testdata
           access: readwrite
+        - team: tbd
+          application: spleis-opprydding-dev
+          access: read
         - team: teamsykmelding
           application: sparenaproxy
           access: read
