--- a/deploy/prod-api.yml
+++ b/deploy/prod-api.yml
@@ -9,7 +9,7 @@ spec:
   image: {{image}}
   port: 8080
   ingresses:
-   - https://spleis-api.prod-fss-pub.nais.io
+   - https://spleis-api.intern.nav.no
   liveness:
     path: /isalive
     initialDelay: 5
@@ -47,22 +47,20 @@ spec:
     inbound:
       rules:
         - application: spesialist
+          namespace: tbd
+          cluster: prod-fss
         - application: spanner
           namespace: tbd
           cluster: prod-gcp
         - application: sporing
           namespace: tbd
           cluster: prod-gcp
-  vault:
-    enabled: true
   secureLogs:
     enabled: true
   env:
-  - name: DATABASE_HOST
-    value: a01dbfl039.adeo.no
-  - name: DATABASE_PORT
-    value: "5432"
-  - name: DATABASE_NAME
-    value: spleis2
-  - name: VAULT_MOUNTPATH
-    value: postgresql/prod-fss/
+  - name: DATABASE_REGION
+    value: "europe-north1"
+  - name: DATABASE_INSTANCE
+    value: "helse-spleis"
+  - name: DATABASE_DATABASE
+    value: "spleis"
