Opprett bruker for spleis-opprydding
* opprydding-dev må også ha skrivetilgang til kafka (pga. ping/pong)

Co-authored-by: Erik Maximilian Forsman <erik.maximilian.forsman@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -174,11 +174,11 @@ spec:
           access: readwrite
         - team: tbd
           application: spleis-opprydding-dev
-          access: read
+          access: readwrite
         - team: teamsykmelding
           application: sparenaproxy
           access: read
         - team: default
           application: sparenaproxy
-          access: read   
-          
+          access: read
+
