--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -41,6 +41,7 @@ spec:
             envVarPrefix: DATABASE
             users:
               - name: spleis-api
+              - name: spleis-opprydding-dev
   secureLogs:
     enabled: true
   env:
