opprydding-workflow reagerer også på endringer i Dockerfile
Co-authored-by: Erik Maximilian Forsman <erik.maximilian.forsman@nav.no>

--- a/.github/workflows/spleis-opprydding-dev.yml
+++ b/.github/workflows/spleis-opprydding-dev.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
     paths:
+      - 'Dockerfile-opprydding-dev'
       - 'sykepenger-opprydding-dev/**'
       - 'build.gradle.kts'
       - '.github/workflows/spleis-opprydding-dev.yml'
