master-workflow lytter ikke på endringer i sykepenger-opprydding-dev
Co-authored-by: Erik Maximilian Forsman <erik.maximilian.forsman@nav.no>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,9 +1,10 @@
-name: Alt utenom API
+name: Alt utenom API og opprydding-dev
 
 on:
   push:
     paths-ignore:
       - 'sykepenger-api/**'
+      - 'sykepenger-opprydding-dev/**'
       - 'jobs/**'
       - 'doc/**'
       - '.idea/**'
