--- a/deploy/dev-opprydding.yml
+++ b/deploy/dev-opprydding.yml
@@ -27,6 +27,12 @@ spec:
     min: 1
     max: 1
     cpuThresholdPercentage: 90
+  gcp:
+    permissions:
+      - resource:
+          apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
+          kind: Project
+        role: roles/cloudsql.client
   prometheus:
     enabled: true
     path: /metrics
