--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -70,15 +70,15 @@ jobs:
           RESOURCE: deploy/dev.yml
           IMAGE: ${{ needs.set_version.outputs.image }}
 
-#  deployProd:
-#    name: deploy to prod
-#    needs: [set_version, build, deployDev, snyk]
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v1
-#      - uses: nais/deploy/actions/deploy@v1
-#        env:
-#          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-#          CLUSTER: prod-gcp
-#          RESOURCE: deploy/prod.yml
-#          IMAGE: ${{ needs.set_version.outputs.image }}
+  deployProd:
+    name: deploy to prod
+    needs: [set_version, build, deployDev, snyk]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: nais/deploy/actions/deploy@v1
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: prod-gcp
+          RESOURCE: deploy/prod.yml
+          IMAGE: ${{ needs.set_version.outputs.image }}
