Glemte å commit'e fila som faktisk lager brukeren

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -42,6 +42,7 @@ spec:
             users:
               - name: spleis-api
               - name: spleis-opprydding-dev
+              - name: spleis-avstemming
   secureLogs:
     enabled: true
   env:
