--- a/.github/workflows/spleis-jobs.yml
+++ b/.github/workflows/spleis-jobs.yml
@@ -41,18 +41,19 @@ jobs:
           docker login --username "$GITHUB_REPOSITORY" -p ${{ secrets.GITHUB_TOKEN }} https://docker.pkg.github.com
           docker push ${{ needs.set_version.outputs.image }}
 
-#  deployDev:
-#      name: deploy to dev
-#      needs: [set_version, build]
-#      runs-on: ubuntu-latest
-#      steps:
-#          - uses: actions/checkout@v1
-#          - uses: nais/deploy/actions/deploy@v1
-#            env:
-#                APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-#                CLUSTER: dev-fss
+  deployDev:
+      name: deploy to dev
+      needs: [set_version, build]
+      runs-on: ubuntu-latest
+      steps:
+          - uses: actions/checkout@v1
+          - uses: nais/deploy/actions/deploy@v1
+            env:
+                APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+                CLUSTER: dev-gcp
 #                RESOURCE: deploy/dev-gc-job.yml,deploy/dev-avstemming-aiven.yml,deploy/dev-avstemming-job.yml
-#                IMAGE: ${{ needs.set_version.outputs.image }}
+                RESOURCE: deploy/dev-avstemming-job.yml
+                IMAGE: ${{ needs.set_version.outputs.image }}
 
 #  deployProd:
 #      name: deploy to prod
