--- a/deploy/dev-avstemming-job.yml
+++ b/deploy/dev-avstemming-job.yml
@@ -26,3 +26,5 @@ spec:
       value: "europe-north1"
     - name: DATABASE_INSTANCE
       value: "helse-spleis"
+    - name: RUNTIME_OPS
+      value: "avstemming"
