Legg til spleis-avstemming som db-bruker i prod

--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -47,6 +47,7 @@ spec:
             envVarPrefix: DATABASE
             users:
               - name: spleis-api
+              - name: spleis-avstemming
   secureLogs:
     enabled: true
   env:
