--- a/.github/workflows/spleis-jobs.yml
+++ b/.github/workflows/spleis-jobs.yml
@@ -64,7 +64,7 @@ jobs:
           - uses: nais/deploy/actions/deploy@v1
             env:
                 APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-                CLUSTER: prod-fss
+                CLUSTER: prod-gcp
 #                RESOURCE: deploy/prod-gc-job.yml,deploy/prod-avstemming-aiven.yml,deploy/prod-avstemming-job.yml
                 RESOURCE: deploy/prod-avstemming-job.yml
                 IMAGE: ${{ needs.set_version.outputs.image }}
