--- a/deploy/dev-avstemming-job.yml
+++ b/deploy/dev-avstemming-job.yml
@@ -7,7 +7,7 @@ metadata:
   namespace: tbd
 spec:
   image: {{image}}
-  schedule: "* 2 * * *"
+  schedule: "0 2 * * *"
   kafka:
     pool: nav-dev
   secureLogs:
