Deploy spleis-gc i prod

--- a/.github/workflows/spleis-jobs.yml
+++ b/.github/workflows/spleis-jobs.yml
@@ -79,5 +79,5 @@ jobs:
                 APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
                 CLUSTER: prod-gcp
 #                RESOURCE: deploy/prod-gc-job.yml,deploy/prod-avstemming-aiven.yml,deploy/prod-avstemming-job.yml
-                RESOURCE: deploy/prod-avstemming-job.yml
+                RESOURCE: deploy/prod-gc-job.yml,deploy/prod-avstemming-job.yml
                 IMAGE: ${{ needs.set_version.outputs.image }}
