--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -5,6 +5,8 @@ on:
     paths-ignore:
       - 'sykepenger-api/**'
       - 'sykepenger-opprydding-dev/**'
+      - 'workflows/spleis-jobs.yml'
+      - 'workflows/spleis-opprydding-dev.yml'
       - 'jobs/**'
       - 'doc/**'
       - '.idea/**'
