--- a/deploy/dev-gc-job.yml
+++ b/deploy/dev-gc-job.yml
@@ -7,7 +7,7 @@ metadata:
   namespace: tbd
 spec:
   image: {{image}}
-  schedule: "48 * * * *"
+  schedule: "0 1 * * SAT"
   kafka:
     pool: nav-dev
   secureLogs:
