Fiks access policy for spesialist, som nå er deployet i dev-gcp
Co-authored-by: Erik Maximilian Forsman <erik.maximilian.forsman@nav.no>
Co-authored-by: Truls Jørgensen <truls.jorgensen@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -175,6 +175,9 @@ spec:
         - team: tbd
           application: spleis-opprydding-dev
           access: readwrite
+        - team: tbd
+          application: spesialist-opprydding-dev
+          access: readwrite
         - team: teamsykmelding
           application: sparenaproxy
           access: read
