Setter maintenance work mem til 5% av total RAM
Co-authored-by: Sondre Halvorsen <sondre.halvorsen@nav.no>

--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -48,6 +48,9 @@ spec:
             users:
               - name: spleis-api
               - name: spleis-avstemming
+        flags:
+          - name: maintenance_work_mem
+            value: "10240MB"
   secureLogs:
     enabled: true
   env:
