Gi spenn-opprydding-dev tilgang til rapid

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -98,6 +98,9 @@ spec:
           application: spenn-avstemming
           access: readwrite
         - team: tbd
+          application: spenn-opprydding-dev
+          access: readwrite
+        - team: tbd
           application: spesialist
           access: readwrite
         - team: tbd
