Short circuit for å trekke perioder tilbake
* I hovedsak for å unngå en drøss med unødvendige meldinger på kafka (behov osv) mens migrering for bugfiks pågår

Co-authored-by: David Steinsland <david@davidsteinsland.net>
Co-authored-by: Erik Maximilian Forsman <erik.maximilian.forsman@nav.no>
Co-authored-by: Simen Ullern <simen.ullern@nav.no>
Co-authored-by: Hege Haavaldsen <hege.haavaldsen@nav.no>
Co-authored-by: Håkon Arneng Holmstedt <hakon.arneng.holmstedt@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -54,7 +54,5 @@ spec:
     value: earliest
   - name: GraphQLPlayground
     value: "true"
-  - name: AVSLUTT_INGEN_UTBETALING
-    value: "false"
-  - name: NY_TILSTANDSFLYT
+  - name: Bugfix
     value: "true"
