Legger til gradle caching

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ org.gradle.jvmargs=-Xmx2g
 kotlin.daemon.jvm.options=-Xmx2g
 org.gradle.parallel=true
 org.gradle.workers.max=16
+org.gradle.caching = true
