--- a/.github/workflows/spleis-api.yml
+++ b/.github/workflows/spleis-api.yml
@@ -29,8 +29,9 @@ jobs:
     needs: set_version
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: '17.x'
       - name: test and build
         run: ./gradlew :sykepenger-api:test :sykepenger-api:build
