Skrur på NyRevurdering i dev for å teste
Co-authored-by: Christian Bülow Skovborg <christian.bulow.skovborg@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -54,5 +54,7 @@ spec:
     value: earliest
   - name: GraphQLPlayground
     value: "true"
+  - name: NyRevurdering
+    value: "true"
   - name: Bugfix
     value: "true"
