Gir sparkel-identer tilgang til topic

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -187,4 +187,6 @@ spec:
         - team: tbd
           application: sparkel-oppgave-endret
           access: readwrite
-
+        - team: tbd
+          application: sparkel-identer
+          access: readwrite
