Midlertidig disable snyk for å deploye
Co-authored-by: Øyvind Hagen <oyvind.hagen@nav.no>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -61,7 +61,7 @@ jobs:
 
   deployDev:
     name: deploy to dev
-    needs: [set_version, build, snyk]
+    needs: [set_version, build]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -74,7 +74,7 @@ jobs:
 
   deployProd:
     name: deploy to prod
-    needs: [set_version, build, deployDev, snyk]
+    needs: [set_version, build, deployDev]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
