Revert "Midlertidig disable snyk for å deploye"
This reverts commit d75799286e3b62c323639e95c1bcbb8d93e4cdec.
And commit 549f5f74573c4ef74df4a3e5c72b9ae0f7e9bb18.

--- a/.github/workflows/spleis-api.yml
+++ b/.github/workflows/spleis-api.yml
@@ -57,7 +57,7 @@ jobs:
 
   deployDev:
     name: deploy to dev
-    needs: [set_version, build]
+    needs: [set_version, build, snyk]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -70,7 +70,7 @@ jobs:
 
   deployProd:
     name: deploy to prod
-    needs: [set_version, build, deployDev]
+    needs: [set_version, build, deployDev, snyk]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
