--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -61,7 +61,7 @@ jobs:
 
   deployDev:
     name: deploy to dev
-    needs: [set_version, build]
+    needs: [set_version, build, snyk]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -74,7 +74,7 @@ jobs:
 
   deployProd:
     name: deploy to prod
-    needs: [set_version, build, deployDev]
+    needs: [set_version, build, deployDev, snyk]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
