--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -24,7 +24,7 @@ jobs:
       - name: create docker tag
         run: echo "TAG=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
     outputs:
-      image: docker.pkg.github.com/${{ github.repository }}/spleis:${{ env.TAG }}
+      image: ghcr.io/${{ github.repository }}/spleis:${{ env.TAG }}
 
   build:
     name: build docker image
@@ -43,7 +43,7 @@ jobs:
         run: docker build . --pull -t ${{ needs.set_version.outputs.image }}
       - name: push docker image
         run: |
-          docker login --username "$GITHUB_REPOSITORY" -p ${{ secrets.GITHUB_TOKEN }} https://docker.pkg.github.com
+          docker login ghcr.io --username "$GITHUB_REPOSITORY" -p ${{ secrets.GITHUB_TOKEN }}
           docker push ${{ needs.set_version.outputs.image }}
 
   snyk:
