Skru på RevurdereInntektMedFlereArbeidsgivere i dev for å teste litt
Co-authored-by: Hege Haavaldsen <hege.haavaldsen@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -56,5 +56,7 @@ spec:
     value: "true"
   - name: NyRevurdering
     value: "true"
+  - name: RevurdereInntektMedFlereArbeidsgivere
+    value: "true"
   - name: Bugfix
     value: "true"
