Gitt sparkel-skjermet-endret tilgang til topic

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -190,3 +190,6 @@ spec:
         - team: tbd
           application: sparkel-identer
           access: readwrite
+        - team: tbd
+          application: sparkel-skjermet-endret
+          access: readwrite
