--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -56,3 +56,5 @@ spec:
     value: "true"
   - name: RevurdereInntektMedFlereArbeidsgivere
     value: "true"
+  - name: UtbetalingtypeAuu
+    value: "true"
