Endre navn på toggle
Co-authored-by: Hege Haavaldsen <hege.haavaldsen@nav.no>
Co-authored-by: Marte Tårnes <marte.tarnes@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -58,5 +58,5 @@ spec:
     value: "true"
   - name: UtbetalingtypeAuu
     value: "true"
-  - name: RevurderKorrigertSøknad
+  - name: RevurderKorrigertSoknad
     value: "true"
