Gi tilgang til sparsom

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -193,3 +193,6 @@ spec:
         - team: tbd
           application: sparkel-skjermet-endret
           access: readwrite
+        - team: tbd
+          application: sparsom
+          access: readwrite
