--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -172,3 +172,6 @@ spec:
         - team: tbd
           application: sparkel-skjermet-endret
           access: readwrite
+        - team: tbd
+          application: sparsom
+          access: readwrite
