skjuler forkasting bak en mektig toggle i starten
Co-authored-by: Håkon Arneng Holmstedt <hakon.arneng.holmstedt@nav.no>
Co-authored-by: Erik Maximilian Forsman <erik.maximilian.forsman@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -60,3 +60,5 @@ spec:
     value: "true"
   - name: RevurderKorrigertSoknad
     value: "true"
+  - name: ForkasteVilkårsgrunnlag
+    value: "true"
