kan ikke bruke æøå i miljøvariabler

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -60,5 +60,5 @@ spec:
     value: "true"
   - name: RevurderKorrigertSoknad
     value: "true"
-  - name: ForkasteVilkårsgrunnlag
+  - name: ForkasteVilkarsgrunnlag
     value: "true"
