--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -21,8 +21,8 @@ spec:
       cpu: 6000m
       memory: 8Gi
     requests:
-      cpu: 2000m
-      memory: 4Gi
+      cpu: 200m
+      memory: 400Mi
   replicas:
     min: 24
     max: 24
