tilgang til sparsom

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -43,6 +43,7 @@ spec:
               - name: spleis-api
               - name: spleis-opprydding-dev
               - name: spleis-avstemming
+              - name: sparsom
   secureLogs:
     enabled: true
   env:
