Gi tilgang til Speaker

--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -175,3 +175,6 @@ spec:
         - team: tbd
           application: sparsom
           access: readwrite
+        - team: tbd
+          application: speaker
+          access: readwrite
