--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -196,3 +196,6 @@ spec:
         - team: tbd
           application: sparsom
           access: readwrite
+        - team: tbd
+          application: speaker
+          access: readwrite
