--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -74,7 +74,7 @@ jobs:
 
   deployProd:
     name: deploy to prod
-    needs: [set_version, build, deployDev, snyk]
+    needs: [set_version, build, snyk]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
