Tilgang i dev for personlig AivenApplication
- NAIS CLI tilbyr kommandoer for personlig tilgang til Kafka topics https://doc.nais.io/cli/commands/aiven/#create

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -199,3 +199,6 @@ spec:
         - team: tbd
           application: speaker
           access: readwrite
+        - team: tbd
+          application: sondre-halvorsen
+          access: read
