Perioder med kun ferie går rett til AUU og revurderes ikke, bak toggle
Co-authored-by: Marte Tårnes <marte.tarnes@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -65,3 +65,5 @@ spec:
     value: "true"
   - name: RevurderOutOfOrder
     value: "true"
+  - name: FerieTilAvsluttetUtenUtbetaling
+    value: "true"
