--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -194,6 +194,9 @@ spec:
           application: sparkel-skjermet-endret
           access: readwrite
         - team: tbd
+          application: sparkel-arbeidsgiver
+          access: read
+        - team: tbd
           application: sparsom
           access: readwrite
         - team: tbd
