Gir sparkel-arbeidsgiver skrivetilgang til topic
Co-authored-by: Marte Tårnes <marte.tarnes@nav.no>
Co-authored-by: Gustav Berggren <gustav.berggren@nav.no>
Co-authored-by: Mikael Bjerga <mikael.bjerga@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -195,7 +195,7 @@ spec:
           access: readwrite
         - team: tbd
           application: sparkel-arbeidsgiver
-          access: read
+          access: readwrite
         - team: tbd
           application: sparsom
           access: readwrite
