Gir sparkel-arbeidsgiver skrivetilgang til topic
Co-authored-by: Marte Tårnes <marte.tarnes@nav.no>
Co-authored-by: Håkon Arneng Holmstedt <hakon.arneng.holmstedt@nav.no>
Co-authored-by: Gustav Berggren <gustav.berggren@nav.no>
Co-authored-by: Mikael Bjerga <mikael.bjerga@nav.no>

--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -173,6 +173,9 @@ spec:
           application: sparkel-skjermet-endret
           access: readwrite
         - team: tbd
+          application: sparkel-arbeidsgiver
+          access: readwrite
+        - team: tbd
           application: sparsom
           access: readwrite
         - team: tbd
