gir tilgang til spleis-migrate på rapid

--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -122,6 +122,9 @@ spec:
           application: spleis-avstemming
           access: readwrite
         - team: tbd
+          application: spleis-migrate
+          access: readwrite
+        - team: tbd
           application: spock
           access: readwrite
         - team: tbd
