migrate-jobben trenger mer minne

--- a/deploy/prod-migrate-job.yml
+++ b/deploy/prod-migrate-job.yml
@@ -7,6 +7,10 @@ metadata:
   namespace: tbd
 spec:
   image: {{image}}
+  resources:
+    limits:
+      cpu: 500m
+      memory: 4096Mi
   kafka:
     pool: nav-prod
   secureLogs:
