--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -48,6 +48,7 @@ spec:
             users:
               - name: spleis-api
               - name: spleis-avstemming
+              - name: spleis-migrate
               - name: sparsom
         flags:
           - name: max_wal_size
