--- a/deploy/prod-migrate-job.yml
+++ b/deploy/prod-migrate-job.yml
@@ -18,6 +18,7 @@ spec:
     enabled: true
   envFrom:
     - secret: google-sql-spleis-spleis-spleis-avstemming-c09f6283
+    - secret: google-sql-spleis-spleis-spleis-migrate-dc6feb9b
   gcp:
     permissions:
       - resource:
@@ -30,8 +31,8 @@ spec:
       value: "europe-north1"
     - name: DATABASE_INSTANCE
       value: "helse-spleis"
-    - name: RUNTIME_OPTS
-      value: "migrate"    # gjør migrering ved å pushe events på kafka, og lar spleis gjøre jobben (lager nedetid)
     #- name: RUNTIME_OPTS
-    #  value: "migrate_v2 192"   # gjør migrering direkte mot databasen ved at alle personer løftes opp til versjon angitt som argument nr 2
+    #  value: "migrate"    # gjør migrering ved å pushe events på kafka, og lar spleis gjøre jobben (lager nedetid)
+    - name: RUNTIME_OPTS
+      value: "migrate_v2 193"   # gjør migrering direkte mot databasen ved at alle personer løftes opp til versjon angitt som argument nr 2
                                  # NB! NB! Da er det lurt å sette opp 'parallelism' til endel høyere, kanskje 30?
