Gi aiven-tilgang til speaker-kafka i dev

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -203,7 +203,7 @@ spec:
           application: sparsom
           access: readwrite
         - team: tbd
-          application: speaker
+          application: speaker-kafka
           access: readwrite
         - team: tbd
           application: sondre-halvorsen
