prøver å redusere sannsynligheten for rebalanseringer pga IM-replay
default i r&r er 200 records om gangen, og 15 minutter som max.poll.interval.ms.

Noen ganger replayer spleis ganske mange inntektsmeldinger, som gjør at spleis bruker mer enn 15 minutter mellom hver poll - som fører til rebalanseringer.

Fordi Inntektsmelding replays ikke er en faktisk record på topicet, men replayes runtime i håndteringen av én konkret Kafka record, medfører dette at Spleis reelt sett håndterer langt mer enn 200 records om gangen.

Eksempel:
Spleis leser inn 200 records fra Kafka. Ved håndtering av melding nr 199 hadde Spleis brukt 5 minutt. Melding nr 199 medfører at Spleis replayer 60 inntektsmeldinger, og bruker totalt 12 minutt på dette. Før Spleis har håndtert alle inntektsmelding-replays, har Kafka allerede iverksatt en rebalansering fordi Kafka tror at podden er død. Når Inntektsmelding replays er håndtert ferdig, og r&r skal committe offset (fordi håndtering av melding nr 199 er ferdig), kaster KafkaConsumer en exception fordi consumeren ikke har noen partisjoner.

--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -80,3 +80,7 @@ spec:
     value: tbd-spleis-v1
   - name: KAFKA_RESET_POLICY
     value: none
+  - name: KAFKA_MAX_RECORDS
+    value: "100"
+  - name: KAFKA_MAX_POLL_INTERVAL_MS
+    value: "1500000" # 1,500,000 millisekunder er 25 minutter
