bruker samme Dockerfile for alle

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -40,7 +40,7 @@ jobs:
       - name: test and build
         run: ./gradlew test build
       - name: build docker image
-        run: docker build . --pull -t ${{ needs.set_version.outputs.image }}
+        run: docker build -f Dockerfile sykepenger-mediators --pull -t ${{ needs.set_version.outputs.image }}
       - name: push docker image
         run: |
           docker login ghcr.io --username "$GITHUB_REPOSITORY" -p ${{ secrets.GITHUB_TOKEN }}
