--- a/.github/workflows/spleis-jobs.yml
+++ b/.github/workflows/spleis-jobs.yml
@@ -36,7 +36,7 @@ jobs:
       - name: test and build
         run: ./gradlew :jobs:test :jobs:build
       - name: build docker image
-        run: docker build -f Dockerfile-jobs . --pull -t ${{ needs.set_version.outputs.image }}
+        run: docker build -f Dockerfile jobs --pull -t ${{ needs.set_version.outputs.image }}
       - name: push docker image
         run: |
           docker login ghcr.io --username "$GITHUB_REPOSITORY" -p ${{ secrets.GITHUB_TOKEN }}
