tilgang til sparsom-opprydding i dev

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -203,6 +203,9 @@ spec:
           application: sparsom
           access: readwrite
         - team: tbd
+          application: sparsom-opprydding
+          access: readwrite
+        - team: tbd
           application: speaker-kafka
           access: readwrite
         - team: tbd
