--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -128,6 +128,9 @@ spec:
           application: spleis-avstemming
           access: readwrite
         - team: tbd
+          application: spleis-avstemming-full
+          access: readwrite
+        - team: tbd
           application: spock
           access: readwrite
         - team: tbd
