Gir helse-sparker-feriepenger tilgang til å skrive på rapid
Co-authored-by: Erik M.Forsman <erik.maximilian.forsman@nav.no>
Co-authored-by: Jakob Havstein Eriksen <jakob.havstein.eriksen@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -38,7 +38,7 @@ spec:
           application: spare
           access: readwrite
         - team: tbd
-          application: sparke-feriepenger
+          application: helse-sparker-feriepenger
           access: write
         - team: tbd
           application: sparker-alt
