Kanskje hun vil både lese og skrive? 🐶
Co-authored-by: Erik M.Forsman <erik.maximilian.forsman@nav.no>
Co-authored-by: Jakob Havstein Eriksen <jakob.havstein.eriksen@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -39,7 +39,7 @@ spec:
           access: readwrite
         - team: tbd
           application: helse-sparker-feriepenger
-          access: write
+          access: readwrite
         - team: tbd
           application: sparker-alt
           access: write
