Gi tilgang speaker-kafka tilgang til aiven i prod

--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -185,5 +185,5 @@ spec:
           application: sparsom
           access: readwrite
         - team: tbd
-          application: speaker
+          application: speaker-kafka
           access: readwrite
