Gir aiven-tilgang til spesialist-migrering i prod og dev
Co-authored-by: Christian Bülow Skovborg <christian.bulow.skovborg@nav.no>

--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -104,6 +104,9 @@ spec:
           application: spesialist
           access: readwrite
         - team: tbd
+          application: spesialist-migrering
+          access: readwrite
+        - team: tbd
           application: spotter
           access: readwrite
         - team: tbd
