Gir sp-revurdering-monitor tilgang til rapid
Co-authored-by: Håkon Arneng Holmstedt <hakon.arneng.holmstedt@nav.no>

--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -185,6 +185,9 @@ spec:
           application: sparkel-arbeidsgiver
           access: readwrite
         - team: tbd
+          application: sp-revurdering-monitor
+          access: readwrite
+        - team: tbd
           application: sparsom
           access: readwrite
         - team: tbd
