tilgang til ny app
Co-authored-by: Simen Ullern <simen.ullern@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -206,7 +206,7 @@ spec:
           application: sparkel-arbeidsgiver
           access: readwrite
         - team: tbd
-          application: sp-revurdering-monitor
+          application: sportsrevyen
           access: readwrite
         - team: tbd
           application: sparsom
