--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -185,7 +185,7 @@ spec:
           application: sparkel-arbeidsgiver
           access: readwrite
         - team: tbd
-          application: sp-revurdering-monitor
+          application: sportsrevyen
           access: readwrite
         - team: tbd
           application: sparsom
