--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -17,6 +17,9 @@ spec:
         retentionHours: 3160  # -1 means unlimited
     acl:
         - team: tbd
+          application: dataprodukt-forstegangssoknad
+          access: readwrite
+        - team: tbd
           application: spre-subsumsjon
           access: readwrite
         - team: tbd
