--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -28,7 +28,7 @@ jobs:
 
   build:
     name: build docker image
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-16-cores
     needs: set_version
     steps:
       - uses: actions/checkout@v3
@@ -48,7 +48,7 @@ jobs:
 
   snyk:
     name: check vulnerabilities
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-16-cores
     steps:
       - uses: actions/checkout@v3
       - name: Gradle vulnerability check
