Gi dataprodukt-iverksettelser aiven-tilgang i dev og prod
Co-authored-by: Jakob Havstein Eriksen <jakob.havstein.eriksen@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -20,6 +20,9 @@ spec:
           application: dataprodukt-forstegangsbehandling
           access: readwrite
         - team: tbd
+          application: dataprodukt-iverksettelser
+          access: readwrite
+        - team: tbd
           application: spre-subsumsjon
           access: readwrite
         - team: tbd
